css for search-options

--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -20,26 +20,26 @@
   "app-menu-search-in-option-culture": "Kultur",
   "app-menu-search-in-option-science": "Wissenschaft",
   "app-menu-search-in-option-business": "Geschäft",
-  "app-menu-filter-by": "Filtern nach",
+  "app-menu-filter-by": "filtern nach",
   "app-menu-filter-by-option-text": "Text",
   "app-menu-filter-by-option-image": "Bild",
   "app-menu-filter-by-option-video": "Video",
-  "app-menu-filter-by-option-audio": "Audio-",
+  "app-menu-filter-by-option-audio": "Audio",
   "app-menu-filter-by-option-data": "Daten",
   "app-menu-filter-by-option-3D": "3D",
   "app-menu-filter-by-option-software": "Software",
   "app-menu-filter-by-option-archive": "Archiv",
-  "app-menu-filter-by-option-entity": "juristische Person",
+  "app-menu-filter-by-option-entity": "Entität",
   "app-menu-filter-by-year-range": "Jahresbereich",
   "app-menu-nature-location-quiz": "Naturstandort-Quiz",
-  "app-menu-sort-by": "Sortieren nach",
+  "app-menu-sort-by": "sortieren nach",
   "app-menu-sort-by-option-relevance-desc": "Relevanz ↓",
   "app-menu-sort-by-option-relevance-asc": "Relevanz ↑",
   "app-menu-sort-by-option-date-desc": "Datum ↓",
   "app-menu-sort-by-option-date-asc": "Datum ↑",
-  "app-menu-sort-by-option-update-desc": "aktualisieren ↓",
-  "app-menu-sort-by-option-update-asc": "aktualisieren ↑",
-  "app-menu-sort-by-option-random": "zufällig",
+  "app-menu-sort-by-option-update-desc": "Aktualisieren ↓",
+  "app-menu-sort-by-option-update-asc": "Aktualisieren ↑",
+  "app-menu-sort-by-option-random": "Zufällig",
   "app-menu-sort-by-option-citations-desc": "Zitate ↓",
   "app-menu-sort-by-option-citations-asc": "Zitate ↑",
   "app-menu-sort-by-option-title-asc": "Titel ↑",
@@ -47,7 +47,7 @@
   "app-menu-sort-by-option-distance-asc": "Abstand ↑",
   "app-menu-sort-by-option-distance-desc": "Abstand ↓",
   "app-menu-actions": "Aktionen",
-  "app-menu-background-audio": "Audio-",
+  "app-menu-background-audio": "Audio",
   "app-menu-background-midi": "MIDI",
   "app-menu-topic-lists": "Themenlisten",
   "app-menu-various-links": "diverse Links",
@@ -179,7 +179,7 @@
   "app-section-media": "Medien",
   "app-section-media-video": "Video",
   "app-section-media-image": "Bild",
-  "app-section-media-audio": "Audio-",
+  "app-section-media-audio": "Audio",
   "app-section-media-software": "Software",
   "app-section-meta": "Meta",
   "app-section-society": "Gesellschaft",
