--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -185,6 +185,7 @@
   "app-section-society": "مجتمع",
   "app-section-society-sports": "رياضات",
   "app-section-society-food": "طعام",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "دِين",
   "app-section-library-poetry": "شِعر",
   "app-section-library-identity": "هوية",
