--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -176,6 +176,7 @@
   "app-section-society": "সমাজ",
   "app-section-society-sports": "খেলাধুলা",
   "app-section-society-food": "খাদ্য",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
   "app-section-library-identity": "দল",
