--- a/app/explore2/assets/i18n/ui/conzept-da.json
+++ b/app/explore2/assets/i18n/ui/conzept-da.json
@@ -185,6 +185,7 @@
   "app-section-society": "samfund",
   "app-section-society-sports": "sport",
   "app-section-society-food": "mad",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
