--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -185,6 +185,7 @@
   "app-section-society": "sociedad",
   "app-section-society-sports": "Deportes",
   "app-section-society-food": "alimento",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "religión",
   "app-section-library-poetry": "poesía",
   "app-section-library-identity": "identidad",
