--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -185,6 +185,7 @@
   "app-section-society": "جامعه",
   "app-section-society-sports": "ورزش ها",
   "app-section-society-food": "غذا",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "دین",
   "app-section-library-poetry": "شعر",
   "app-section-library-identity": "هویت",
