--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -185,6 +185,7 @@
   "app-section-society": "društvo",
   "app-section-society-sports": "sportski",
   "app-section-society-food": "hrana",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "religija",
   "app-section-library-poetry": "poezija",
   "app-section-library-identity": "identitet",
