--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -177,6 +177,7 @@
   "app-section-society": "masyarakat",
   "app-section-society-sports": "olahraga",
   "app-section-society-food": "makanan",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "agama",
   "app-section-library-poetry": "puisi",
   "app-section-library-identity": "identitas",
