--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -185,6 +185,7 @@
   "app-section-society": "società",
   "app-section-society-sports": "gli sport",
   "app-section-society-food": "cibo",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "religione",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identità",
