--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -185,6 +185,7 @@
   "app-section-society": "maatschappij",
   "app-section-society-sports": "sport-",
   "app-section-society-food": "voedsel",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "religie",
   "app-section-library-poetry": "poëzie",
   "app-section-library-identity": "identiteit",
