--- a/app/explore2/assets/i18n/ui/conzept-no.json
+++ b/app/explore2/assets/i18n/ui/conzept-no.json
@@ -185,6 +185,7 @@
   "app-section-society": "samfunn",
   "app-section-society-sports": "sport",
   "app-section-society-food": "mat",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
