--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -185,6 +185,7 @@
   "app-section-society": "sociedade",
   "app-section-society-sports": "Esportes",
   "app-section-society-food": "comida",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "religião",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identidade",
