--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -185,6 +185,7 @@
   "app-section-society": "общество",
   "app-section-society-sports": "виды спорта",
   "app-section-society-food": "еда",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "религия",
   "app-section-library-poetry": "поэзия",
   "app-section-library-identity": "личность",
