--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -185,6 +185,7 @@
   "app-section-society": "друштво",
   "app-section-society-sports": "спортске",
   "app-section-society-food": "храна",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "религија",
   "app-section-library-poetry": "поезија",
   "app-section-library-identity": "идентитет",
