--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -185,6 +185,7 @@
   "app-section-society": "samhälle",
   "app-section-society-sports": "sporter",
   "app-section-society-food": "mat",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
