--- a/app/explore2/assets/i18n/ui/conzept-sw.json
+++ b/app/explore2/assets/i18n/ui/conzept-sw.json
@@ -185,6 +185,7 @@
   "app-section-society": "jamii",
   "app-section-society-sports": "michezo",
   "app-section-society-food": "chakula",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "dini",
   "app-section-library-poetry": "ushairi",
   "app-section-library-identity": "utambulisho",
