--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -185,6 +185,7 @@
   "app-section-society": "toplum",
   "app-section-society-sports": "Spor Dalları",
   "app-section-society-food": "yiyecek",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "din",
   "app-section-library-poetry": "şiir",
   "app-section-library-identity": "kimlik",
