--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -185,6 +185,7 @@
   "app-section-society": "суспільства",
   "app-section-society-sports": "спорт",
   "app-section-society-food": "харчування",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "релігія",
   "app-section-library-poetry": "поезії",
   "app-section-library-identity": "ідентичність",
