--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -185,6 +185,7 @@
   "app-section-society": "xã hội",
   "app-section-society-sports": "các môn thể thao",
   "app-section-society-food": "đồ ăn",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "tôn giáo",
   "app-section-library-poetry": "thơ",
   "app-section-library-identity": "danh tính",
