--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -185,6 +185,7 @@
   "app-section-society": "社会",
   "app-section-society-sports": "运动的",
   "app-section-society-food": "食物",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "宗教",
   "app-section-library-poetry": "诗歌",
   "app-section-library-identity": "身份",
