--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -185,6 +185,7 @@
   "app-section-society": "katilingban",
   "app-section-society-sports": "sports",
   "app-section-society-food": "pagkaon",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "relihiyon",
   "app-section-library-poetry": "balak",
   "app-section-library-identity": "pagkatawo",
