--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -185,6 +185,7 @@
   "app-section-society": "Gesellschaft",
   "app-section-society-sports": "Sport",
   "app-section-society-food": "Essen",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "Poesie",
   "app-section-library-identity": "Identität",
