--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -177,6 +177,7 @@
   "app-section-society": "yhteiskuntaan",
   "app-section-society-sports": "Urheilu",
   "app-section-society-food": "ruokaa",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "uskonto",
   "app-section-library-poetry": "runous",
   "app-section-library-identity": "identiteetti",
