--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -177,6 +177,7 @@
   "app-section-society": "société",
   "app-section-society-sports": "des sports",
   "app-section-society-food": "nourriture",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poésie",
   "app-section-library-identity": "identité",
