--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -185,6 +185,7 @@
   "app-section-society": "al'umma",
   "app-section-society-sports": "wasanni",
   "app-section-society-food": "abinci",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "addini",
   "app-section-library-poetry": "waka",
   "app-section-library-identity": "ainihi",
