--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -185,6 +185,7 @@
   "app-section-society": "समाज",
   "app-section-society-sports": "खेल",
   "app-section-society-food": "खाना",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "धर्म",
   "app-section-library-poetry": "कविता",
   "app-section-library-identity": "पहचान",
