--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -185,6 +185,7 @@
   "app-section-society": "社会",
   "app-section-society-sports": "スポーツ",
   "app-section-society-food": "食べ物",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "宗教",
   "app-section-library-poetry": "詩",
   "app-section-library-identity": "身元",
