--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -185,6 +185,7 @@
   "app-section-society": "사회",
   "app-section-society-sports": "스포츠",
   "app-section-society-food": "음식",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "종교",
   "app-section-library-poetry": "시",
   "app-section-library-identity": "신원",
