--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -185,6 +185,7 @@
   "app-section-society": "సమాజం",
   "app-section-society-sports": "క్రీడలు",
   "app-section-society-food": "ఆహారం",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "మతం",
   "app-section-library-poetry": "కవిత్వం",
   "app-section-library-identity": "గుర్తింపు",
