--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -185,6 +185,7 @@
   "app-section-society": "معاشرہ",
   "app-section-society-sports": "کھیل",
   "app-section-society-food": "کھانا",
+  "app-menu-grid-mode": "grid mode sidebar",
   "app-section-library-religion": "مذہب",
   "app-section-library-poetry": "شاعری",
   "app-section-library-identity": "شناخت",
