--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "سمة",
   "app-menu-interface-language": "لغة الواجهة",
   "app-menu-voice": "صوت",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "إظهار المساعدة المضمنة",
   "app-menu-inline-help": "مساعدة مضمنة",
   "app-menu-user-manual": "دليل الاستخدام",
