--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -16,6 +16,7 @@
   "app-title-citations": "উদ্ধৃতি",
   "app-menu-filter-by": "দ্বারা ফিল্টার করুন",
   "app-menu-filter-by-year-range": "বছরের পরিসীমা",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "ইনলাইন সাহায্য দেখান",
   "app-menu-inline-help": "ইনলাইন সাহায্য",
   "app-menu-nature-location-quiz": "প্রকৃতি অবস্থান কুইজ",
