--- a/app/explore2/assets/i18n/ui/conzept-ca.json
+++ b/app/explore2/assets/i18n/ui/conzept-ca.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "llenguatge de la interfície",
   "app-menu-voice": "veu",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "mostra l'ajuda en línia",
   "app-menu-inline-help": "ajuda en línia",
   "app-menu-user-manual": "manual d'usuari",
