--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "interface nga pinulongan",
   "app-menu-voice": "tingog",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "ipakita inline nga tabang",
   "app-menu-inline-help": "inline nga tabang",
   "app-menu-user-manual": "manwal sa paggamit",
