--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "téma",
   "app-menu-interface-language": "jazyk rozhraní",
   "app-menu-voice": "hlas",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "zobrazit inline nápovědu",
   "app-menu-inline-help": "inline nápověda",
   "app-menu-user-manual": "uživatelský manuál",
