--- a/app/explore2/assets/i18n/ui/conzept-da.json
+++ b/app/explore2/assets/i18n/ui/conzept-da.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "grænsefladesprog",
   "app-menu-voice": "stemme",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "vis inline hjælp",
   "app-menu-inline-help": "inline hjælp",
   "app-menu-user-manual": "brugermanual",
