--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "Thema",
   "app-menu-interface-language": "Schnittstellensprache",
   "app-menu-voice": "Stimme",
+  "app-menu-hear-voice": "Stimme hören",
   "app-menu-show-inline-help": "Inline-Hilfe anzeigen",
   "app-menu-inline-help": "Inline-Hilfe",
   "app-menu-user-manual": "Benutzerhandbuch",
