--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -59,6 +59,7 @@
   "app-menu-theme": "theme",
   "app-menu-interface-language": "interface language",
   "app-menu-voice": "voice",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "show inline help",
   "app-menu-inline-help": "inline help",
   "app-menu-user-manual": "user manual",
