--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "lenguaje de interfaz",
   "app-menu-voice": "voz",
+  "app-menu-hear-voice": "escuchar voz",
   "app-menu-show-inline-help": "mostrar ayuda en línea",
   "app-menu-inline-help": "ayuda en línea",
   "app-menu-user-manual": "manual de usuario",
