--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "موضوع",
   "app-menu-interface-language": "زبان رابط",
   "app-menu-voice": "صدا",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "نشان دادن کمک درون خطی",
   "app-menu-inline-help": "کمک درون خطی",
   "app-menu-user-manual": "راهنمای کاربری",
