--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -16,6 +16,7 @@
   "app-title-citations": "Citations",
   "app-menu-filter-by": "filter by",
   "app-menu-filter-by-year-range": "year range",
+  "app-menu-hear-voice": "entendre la voix",
   "app-menu-show-inline-help": "show inline help",
   "app-menu-inline-help": "inline help",
   "app-menu-nature-location-quiz": "nature location quiz",
