--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "jigo",
   "app-menu-interface-language": "harshen mu'amala",
   "app-menu-voice": "murya",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "nuna taimakon layi",
   "app-menu-inline-help": "taimakon layi",
   "app-menu-user-manual": "littafin mai amfani",
