--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "विषय",
   "app-menu-interface-language": "इंटरफ़ेस भाषा",
   "app-menu-voice": "आवाज़",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "इनलाइन सहायता दिखाएं",
   "app-menu-inline-help": "इनलाइन सहायता",
   "app-menu-user-manual": "उपयोगकर्ता पुस्तिका",
