--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "jezik sučelja",
   "app-menu-voice": "glas",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "prikaži ugrađenu pomoć",
   "app-menu-inline-help": "inline pomoć",
   "app-menu-user-manual": "Korisnički priručnik",
