--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "linguaggio dell'interfaccia",
   "app-menu-voice": "voce",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "mostra la guida in linea",
   "app-menu-inline-help": "aiuto in linea",
   "app-menu-user-manual": "Manuale d'uso",
