--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "テーマ",
   "app-menu-interface-language": "インターフェース言語",
   "app-menu-voice": "声",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "インラインヘルプを表示する",
   "app-menu-inline-help": "インラインヘルプ",
   "app-menu-user-manual": "ユーザーマニュアル",
