--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "주제",
   "app-menu-interface-language": "인터페이스 언어",
   "app-menu-voice": "목소리",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "인라인 도움말 표시",
   "app-menu-inline-help": "인라인 도움말",
   "app-menu-user-manual": "사용자 매뉴얼",
