--- a/app/explore2/assets/i18n/ui/conzept-mr.json
+++ b/app/explore2/assets/i18n/ui/conzept-mr.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "थीम",
   "app-menu-interface-language": "इंटरफेस भाषा",
   "app-menu-voice": "आवाज",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "इनलाइन मदत दाखवा",
   "app-menu-inline-help": "इनलाइन मदत",
   "app-menu-user-manual": "उपयोगकर्ता पुस्तिका",
