--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "thema",
   "app-menu-interface-language": "interfacetaal",
   "app-menu-voice": "stem",
+  "app-menu-hear-voice": "stem horen",
   "app-menu-show-inline-help": "inline-hulp weergeven",
   "app-menu-inline-help": "inline hulp",
   "app-menu-user-manual": "handleiding",
