--- a/app/explore2/assets/i18n/ui/conzept-no.json
+++ b/app/explore2/assets/i18n/ui/conzept-no.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "grensesnittspråk",
   "app-menu-voice": "stemme",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "vis integrert hjelp",
   "app-menu-inline-help": "innebygd hjelp",
   "app-menu-user-manual": "brukermanual",
