--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "Interface de linguagem",
   "app-menu-voice": "voz",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "mostrar ajuda embutida",
   "app-menu-inline-help": "ajuda embutida",
   "app-menu-user-manual": "manual do usuário",
