--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "тема",
   "app-menu-interface-language": "язык интерфейса",
   "app-menu-voice": "голос",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "показать встроенную справку",
   "app-menu-inline-help": "встроенная справка",
   "app-menu-user-manual": "руководство пользователя",
