--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "тема",
   "app-menu-interface-language": "језик интерфејса",
   "app-menu-voice": "глас",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "прикажи помоћ на линији",
   "app-menu-inline-help": "инлине помоћ",
   "app-menu-user-manual": "упутство за коришћење",
