--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "gränssnittsspråk",
   "app-menu-voice": "röst",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "visa inline hjälp",
   "app-menu-inline-help": "inline hjälp",
   "app-menu-user-manual": "användarmanual",
