--- a/app/explore2/assets/i18n/ui/conzept-sw.json
+++ b/app/explore2/assets/i18n/ui/conzept-sw.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "mandhari",
   "app-menu-interface-language": "lugha ya kiolesura",
   "app-menu-voice": "sauti",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "onyesha usaidizi wa ndani",
   "app-menu-inline-help": "msaada wa ndani",
   "app-menu-user-manual": "mwongozo wa mtumiaji",
