--- a/app/explore2/assets/i18n/ui/conzept-ta.json
+++ b/app/explore2/assets/i18n/ui/conzept-ta.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "தீம்",
   "app-menu-interface-language": "இடைமுக மொழி",
   "app-menu-voice": "குரல்",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "இன்லைன் உதவியைக் காட்டு",
   "app-menu-inline-help": "இன்லைன் உதவி",
   "app-menu-user-manual": "பயனர் கையேடு",
