--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "థీమ్",
   "app-menu-interface-language": "ఇంటర్ఫేస్ భాష",
   "app-menu-voice": "వాయిస్",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "ఇన్‌లైన్ సహాయాన్ని చూపండి",
   "app-menu-inline-help": "ఇన్లైన్ సహాయం",
   "app-menu-user-manual": "వాడుక సూచిక",
