--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "tema",
   "app-menu-interface-language": "arayüz dili",
   "app-menu-voice": "ses",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "satır içi yardımı göster",
   "app-menu-inline-help": "satır içi yardım",
   "app-menu-user-manual": "Kullanım kılavuzu",
