--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "тема",
   "app-menu-interface-language": "мова інтерфейсу",
   "app-menu-voice": "голос",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "показати вбудовану довідку",
   "app-menu-inline-help": "вбудована довідка",
   "app-menu-user-manual": "посібник користувача",
