--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "خیالیہ",
   "app-menu-interface-language": "انٹرفیس کی زبان",
   "app-menu-voice": "آواز",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "ان لائن مدد دکھائیں۔",
   "app-menu-inline-help": "ان لائن مدد",
   "app-menu-user-manual": "صارف دستی",
