--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "chủ đề",
   "app-menu-interface-language": "ngôn ngữ giao diện",
   "app-menu-voice": "tiếng nói",
+  "app-menu-hear-voice": "hear voice",
   "app-menu-show-inline-help": "hiển thị trợ giúp nội tuyến",
   "app-menu-inline-help": "trợ giúp nội tuyến",
   "app-menu-user-manual": "hướng dẫn sử dụng",
