--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -55,6 +55,7 @@
   "app-menu-theme": "主题",
   "app-menu-interface-language": "界面语言",
   "app-menu-voice": "嗓音",
+  "app-menu-hear-voice": "听到声音",
   "app-menu-show-inline-help": "显示内联帮助",
   "app-menu-inline-help": "内联帮助",
   "app-menu-user-manual": "用户手册",
