i18n, use activeOnDatasources() in fields

--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "رياضات",
   "app-section-society-food": "طعام",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "دِين",
   "app-section-library-poetry": "شِعر",
   "app-section-library-identity": "هوية",
