--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "sportovní",
   "app-section-society-food": "jídlo",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "náboženství",
   "app-section-library-poetry": "poezie",
   "app-section-library-identity": "identita",
