--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -179,6 +179,7 @@
   "app-section-society-sports": "des sports",
   "app-section-society-food": "nourriture",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "plage de dates",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poésie",
   "app-section-library-identity": "identité",
