--- a/app/explore2/assets/i18n/ui/conzept-ta.json
+++ b/app/explore2/assets/i18n/ui/conzept-ta.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "விளையாட்டு",
   "app-section-society-food": "உணவு",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "மதம்",
   "app-section-library-poetry": "கவிதை",
   "app-section-library-identity": "அடையாளம்",
