--- a/app/explore2/assets/i18n/ui/conzept-ca.json
+++ b/app/explore2/assets/i18n/ui/conzept-ca.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "esports",
   "app-section-society-food": "menjar",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "religió",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identitat",
