--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "sports",
   "app-section-society-food": "pagkaon",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "relihiyon",
   "app-section-library-poetry": "balak",
   "app-section-library-identity": "pagkatawo",
