--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "Sport",
   "app-section-society-food": "Essen",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "datumsbereich",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "Poesie",
   "app-section-library-identity": "Identität",
