--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "Deportes",
   "app-section-society-food": "alimento",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "rango de fechas",
   "app-section-library-religion": "religión",
   "app-section-library-poetry": "poesía",
   "app-section-library-identity": "identidad",
