--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "ورزش ها",
   "app-section-society-food": "غذا",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "دین",
   "app-section-library-poetry": "شعر",
   "app-section-library-identity": "هویت",
