--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "wasanni",
   "app-section-society-food": "abinci",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "addini",
   "app-section-library-poetry": "waka",
   "app-section-library-identity": "ainihi",
