--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "sportski",
   "app-section-society-food": "hrana",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "religija",
   "app-section-library-poetry": "poezija",
   "app-section-library-identity": "identitet",
