--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -179,6 +179,7 @@
   "app-section-society-sports": "olahraga",
   "app-section-society-food": "makanan",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "agama",
   "app-section-library-poetry": "puisi",
   "app-section-library-identity": "identitas",
