--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "gli sport",
   "app-section-society-food": "cibo",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "religione",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identità",
