--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "スポーツ",
   "app-section-society-food": "食べ物",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "宗教",
   "app-section-library-poetry": "詩",
   "app-section-library-identity": "身元",
