--- a/app/explore2/assets/i18n/ui/conzept-mr.json
+++ b/app/explore2/assets/i18n/ui/conzept-mr.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "खेळ",
   "app-section-society-food": "अन्न",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "धर्म",
   "app-section-library-poetry": "कविता",
   "app-section-library-identity": "ओळख",
