--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "виды спорта",
   "app-section-society-food": "еда",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "религия",
   "app-section-library-poetry": "поэзия",
   "app-section-library-identity": "личность",
