--- a/app/explore2/assets/i18n/ui/conzept-sw.json
+++ b/app/explore2/assets/i18n/ui/conzept-sw.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "michezo",
   "app-section-society-food": "chakula",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "dini",
   "app-section-library-poetry": "ushairi",
   "app-section-library-identity": "utambulisho",
