--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "کھیل",
   "app-section-society-food": "کھانا",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "مذہب",
   "app-section-library-poetry": "شاعری",
   "app-section-library-identity": "شناخت",
