--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "các môn thể thao",
   "app-section-society-food": "đồ ăn",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "tôn giáo",
   "app-section-library-poetry": "thơ",
   "app-section-library-identity": "danh tính",
