--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -187,6 +187,7 @@
   "app-section-society-sports": "运动的",
   "app-section-society-food": "食物",
   "app-menu-grid-mode": "grid mode sidebar",
+  "app-menu-filter-by-date-range": "date range",
   "app-section-library-religion": "宗教",
   "app-section-library-poetry": "诗歌",
   "app-section-library-identity": "身份",
