more app darkmode

--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -223,7 +223,7 @@
   "app-guide-organism": "organism",
   "app-guide-music": "music",
   "app-guide-science": "science",
-  "app-guide-welcome-text": "Conzept is an attempt to create an encyclopedia for the 21st century. A free topic-exploration tool based on Wikipedia, Wikidata, Open Library, GBIF, YouTube and other information sources. You can read more about this project in the user guide. <br><br> Enjoy your explorations! If you experience a problem, please submit a ticket or send a tweet.",
+  "app-guide-welcome-text": "Conzept is an attempt to create an encyclopedia for the 21st century. A free topic-exploration tool based on Wikipedia, Wikidata, Archive.org, OpenAlex and other information sources. You can read more about this project in the user guide. <br><br> Enjoy your explorations! If you experience a problem, please submit a ticket or send a tweet.",
   "app-guide-documentary": "documentary",
   "app-guide-country": "country",
   "app-guide-string-search": "string search",
