--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -100,6 +100,7 @@
   "app-menu-font-type": "font type",
   "app-menu-font-size": "font size",
   "app-menu-darkmode": "darkmode",
+  "app-menu-graphmode": "graphmode",
   "app-menu-link-preview": "link preview",
   "app-menu-color-filter": "color filter",
   "app-menu-locale": "locale",
