--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "comida",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "intervalo de datas",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "religião",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identidade",
