--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "کھانا",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "مذہب",
   "app-section-library-poetry": "شاعری",
   "app-section-library-identity": "شناخت",
