--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -179,6 +179,7 @@
   "app-section-society-food": "খাদ্য",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
   "app-section-library-identity": "দল",
