--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "pagkaon",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "relihiyon",
   "app-section-library-poetry": "balak",
   "app-section-library-identity": "pagkatawo",
