--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "jídlo",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "náboženství",
   "app-section-library-poetry": "poezie",
   "app-section-library-identity": "identita",
