--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "alimento",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "rango de fechas",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "religión",
   "app-section-library-poetry": "poesía",
   "app-section-library-identity": "identidad",
