--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "غذا",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "دین",
   "app-section-library-poetry": "شعر",
   "app-section-library-identity": "هویت",
