--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "abinci",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "addini",
   "app-section-library-poetry": "waka",
   "app-section-library-identity": "ainihi",
