--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "खाना",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "धर्म",
   "app-section-library-poetry": "कविता",
   "app-section-library-identity": "पहचान",
