--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "hrana",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "religija",
   "app-section-library-poetry": "poezija",
   "app-section-library-identity": "identitet",
