--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "음식",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "종교",
   "app-section-library-poetry": "시",
   "app-section-library-identity": "신원",
