--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "voedsel",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "datumbereik",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "religie",
   "app-section-library-poetry": "poëzie",
   "app-section-library-identity": "identiteit",
