--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "еда",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "религия",
   "app-section-library-poetry": "поэзия",
   "app-section-library-identity": "личность",
