--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "храна",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "религија",
   "app-section-library-poetry": "поезија",
   "app-section-library-identity": "идентитет",
