--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "mat",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
