--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "ఆహారం",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "మతం",
   "app-section-library-poetry": "కవిత్వం",
   "app-section-library-identity": "గుర్తింపు",
