--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "yiyecek",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "din",
   "app-section-library-poetry": "şiir",
   "app-section-library-identity": "kimlik",
