--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "харчування",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "релігія",
   "app-section-library-poetry": "поезії",
   "app-section-library-identity": "ідентичність",
