--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -188,6 +188,7 @@
   "app-section-society-food": "đồ ăn",
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
+  "app-menu-graphmode": "graphmode",
   "app-section-library-religion": "tôn giáo",
   "app-section-library-poetry": "thơ",
   "app-section-library-identity": "danh tính",
