--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -180,6 +180,7 @@
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
   "app-menu-graphmode": "graphmode",
+  "app-menu-near": "near",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
   "app-section-library-identity": "দল",
