--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -181,6 +181,7 @@
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
   "app-menu-graphmode": "graphmode",
+  "app-menu-near": "near",
   "app-section-library-religion": "uskonto",
   "app-section-library-poetry": "runous",
   "app-section-library-identity": "identiteetti",
