--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -181,6 +181,7 @@
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "plage de dates",
   "app-menu-graphmode": "graphmode",
+  "app-menu-near": "near",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poésie",
   "app-section-library-identity": "identité",
