--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -189,6 +189,7 @@
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "datumbereik",
   "app-menu-graphmode": "graphmode",
+  "app-menu-near": "vlakbij",
   "app-section-library-religion": "religie",
   "app-section-library-poetry": "poëzie",
   "app-section-library-identity": "identiteit",
