--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -189,6 +189,7 @@
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "intervalo de datas",
   "app-menu-graphmode": "graphmode",
+  "app-menu-near": "near",
   "app-section-library-religion": "religião",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identidade",
