--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -189,6 +189,7 @@
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
   "app-menu-graphmode": "graphmode",
+  "app-menu-near": "near",
   "app-section-library-religion": "религия",
   "app-section-library-poetry": "поэзия",
   "app-section-library-identity": "личность",
