--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -189,6 +189,7 @@
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
   "app-menu-graphmode": "graphmode",
+  "app-menu-search-in-option-web": "web",
   "app-menu-near": "near",
   "app-section-library-religion": "náboženství",
   "app-section-library-poetry": "poezie",
