--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -189,6 +189,7 @@
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "rango de fechas",
   "app-menu-graphmode": "graphmode",
+  "app-menu-search-in-option-web": "web",
   "app-menu-near": "cerca",
   "app-section-library-religion": "religión",
   "app-section-library-poetry": "poesía",
