--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -181,6 +181,7 @@
   "app-menu-grid-mode": "grid mode sidebar",
   "app-menu-filter-by-date-range": "date range",
   "app-menu-graphmode": "graphmode",
+  "app-menu-search-in-option-web": "web",
   "app-menu-near": "near",
   "app-section-library-religion": "agama",
   "app-section-library-poetry": "puisi",
