--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -181,6 +181,7 @@
   "app-menu-filter-by-date-range": "date range",
   "app-menu-graphmode": "graphmode",
   "app-menu-search-in-option-web": "web",
+  "app-menu-search-in-option-news": "news",
   "app-menu-near": "near",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
