--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -190,6 +190,7 @@
   "app-menu-filter-by-date-range": "datumsbereich",
   "app-menu-graphmode": "graphmode",
   "app-menu-search-in-option-web": "web",
+  "app-menu-search-in-option-news": "news",
   "app-menu-near": "nahe",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "Poesie",
