--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -182,6 +182,7 @@
   "app-menu-filter-by-date-range": "date range",
   "app-menu-graphmode": "graphmode",
   "app-menu-search-in-option-web": "web",
+  "app-menu-search-in-option-news": "news",
   "app-menu-near": "near",
   "app-section-library-religion": "uskonto",
   "app-section-library-poetry": "runous",
