--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -190,6 +190,7 @@
   "app-menu-filter-by-date-range": "datumbereik",
   "app-menu-graphmode": "graphmode",
   "app-menu-search-in-option-web": "web",
+  "app-menu-search-in-option-news": "news",
   "app-menu-near": "vlakbij",
   "app-section-library-religion": "religie",
   "app-section-library-poetry": "poëzie",
