--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -190,6 +190,7 @@
   "app-menu-filter-by-date-range": "intervalo de datas",
   "app-menu-graphmode": "graphmode",
   "app-menu-search-in-option-web": "web",
+  "app-menu-search-in-option-news": "news",
   "app-menu-near": "near",
   "app-section-library-religion": "religião",
   "app-section-library-poetry": "poesia",
