conceptology prompt + bookmark action

--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -182,6 +182,7 @@
   "app-menu-graphmode": "graphmode",
   "app-menu-search-in-option-web": "web",
   "app-menu-search-in-option-news": "news",
+  "app-guide-bookmark-conceptology": "conceptology",
   "app-menu-near": "near",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
