--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -218,6 +218,7 @@
   "app-guide-bookmark-similarities": "similarities",
   "app-guide-bookmark-implications": "implications",
   "app-guide-bookmark-history": "history",
+  "app-guide-bookmark-conceptology": "conceptology",
   "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-guide-see-more": "see more",
   "app-guide-page": "page",
