--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -183,6 +183,7 @@
   "app-menu-graphmode": "graphmode",
   "app-menu-search-in-option-web": "web",
   "app-menu-search-in-option-news": "news",
+  "app-guide-bookmark-conceptology": "conceptology",
   "app-menu-near": "near",
   "app-section-library-religion": "uskonto",
   "app-section-library-poetry": "runous",
