--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -191,6 +191,7 @@
   "app-menu-graphmode": "graphmode",
   "app-menu-search-in-option-web": "web",
   "app-menu-search-in-option-news": "news",
+  "app-guide-bookmark-conceptology": "conceptology",
   "app-menu-near": "near",
   "app-section-library-religion": "మతం",
   "app-section-library-poetry": "కవిత్వం",
