--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -183,6 +183,7 @@
   "app-menu-search-in-option-web": "web",
   "app-menu-search-in-option-news": "news",
   "app-guide-bookmark-conceptology": "conceptology",
+  "app-menu-search-in-option-media": "media",
   "app-menu-near": "near",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
