--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -192,6 +192,7 @@
   "app-menu-search-in-option-web": "web",
   "app-menu-search-in-option-news": "news",
   "app-guide-bookmark-conceptology": "conceptology",
+  "app-menu-search-in-option-media": "media",
   "app-menu-near": "nahe",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "Poesie",
