--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -25,6 +25,7 @@
   "app-menu-search-in-option-science": "science",
   "app-menu-search-in-option-business": "business",
   "app-menu-search-in-option-news": "news",
+  "app-menu-search-in-option-media": "media",
   "app-menu-search-in-option-web": "web",
   "app-menu-near": "near",
   "app-menu-filter-by": "filter by",
