new datasource: CourtListener, http header

--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -193,6 +193,7 @@
   "app-menu-search-in-option-news": "news",
   "app-guide-bookmark-conceptology": "conceptology",
   "app-menu-search-in-option-media": "media",
+  "app-menu-search-in-option-legal": "legal",
   "app-menu-near": "nahe",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "Poesie",
