--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -193,6 +193,7 @@
   "app-menu-search-in-option-news": "news",
   "app-guide-bookmark-conceptology": "conceptology",
   "app-menu-search-in-option-media": "media",
+  "app-menu-search-in-option-legal": "legal",
   "app-menu-near": "vlakbij",
   "app-section-library-religion": "religie",
   "app-section-library-poetry": "poëzie",
