--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -184,6 +184,7 @@
   "app-menu-search-in-option-news": "news",
   "app-guide-bookmark-conceptology": "conceptology",
   "app-menu-search-in-option-media": "media",
+  "app-menu-search-in-option-legal": "legal",
   "app-menu-near": "near",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
