--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -27,6 +27,7 @@
   "app-menu-search-in-option-news": "news",
   "app-menu-search-in-option-media": "media",
   "app-menu-search-in-option-web": "web",
+  "app-menu-search-in-option-legal": "legal",
   "app-menu-near": "near",
   "app-menu-filter-by": "filter by",
   "app-menu-filter-by-option-text": "text",
